# OpenXLSX

./: .gitignore  CMakeLists.txt  Makefile.GNU  README.md
Examples/: CMakeLists.txt  Demo10.cpp  Demo1A.cpp  Demo4.cpp  Demo6.cpp
OpenXLSX/: CMakeLists.txt  OpenXLSXConfig.cmake  bundle_static_library.cmake
OpenXLSX/headers/: XLCellRange.hpp  XLProperties.hpp  XLRelationships.hpp  XLRow.hpp  XLSheet.hpp  XLXmlData.hpp  XLXmlParser.hpp  XLZipArchive.hpp
OpenXLSX/headers/detail/: LibZip.hpp  OpenXLSXFileSystemTools.hpp  Zippy.hpp
OpenXLSX/sources/: XLCellRange.cpp  XLComments.cpp  XLDocument.cpp  XLProperties.cpp  XLRelationships.cpp  XLRow.cpp  XLRowData.cpp  XLSheet.cpp  XLXmlData.cpp  XLXmlParser.cpp
cmake/: get-git-HEAD-ID.cmake  manage-dependency.cmake  manage_dependency.cmake
